restyle logo to fix contrast error

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,7 +19,7 @@ body {
 }
 
 .border-red {
-    border: 2px solid #dc3545;
+    border: 3px solid #dc3545;
 }
 
 .border-top-red {
@@ -34,18 +34,24 @@ body {
     padding-top: 0.5rem;
 }
 
+/* ------------------------------------------------------------------------logo styling */
 .logo-letter {
     font-family: 'Damion', cursive;
+    text-shadow: 3px 1px 0.5px #000;
     font-size: 2rem;
     color: #dc3545;
 }
+
+.bg-logo {
+    background-color: #fff59a;
+}
+
 
 /* ------------------------------------------------------------------------- counter styling for number of items in cart  */
 .cart-counter {
     position: absolute;
     top: 0;
     right: 0;
-    /* background-color: #dc3545; */
     color: #fff;
     font-size: 0.8rem;
     padding: 0.2rem 0.5rem;
@@ -136,7 +142,13 @@ footer {
 }
 
 /* -------------------------------------------------------------- Media Queries */
-@media (min-width: 992px) {
+@media screen and (min-width: 404px) {
+    .border-red {
+        border: 6px solid #dc3545;
+    }
+}
+    
+@media screen and (min-width: 992px) {
     .cart-counter {
         top: 2px;
         right: 9px;
